[package]
name = "hokg"
version = "0.1.0"
edition = "2021"
description = "Hensel-Optimized Key Generation (HOKG) for data-efficient elliptic curve cryptography"
authors = ["Dr. Roy Murphy"]
license = "MIT"
repository = "https://github.com/murphsicles/HOKG"
keywords = ["cryptography", "elliptic-curve", "hensel", "ecc", "data-efficiency"]
categories = ["cryptography", "mathematics"]

[dependencies]
num-bigint-dig = { version = "0.8.4", features = ["rand"] }  # For large integer arithmetic with random number generation
num-traits = "0.2.19"                                       # For numeric traits
rand = "0.9.1"                                              # For random number generation

[dev-dependencies]
criterion = "0.6.0"                                         # For benchmarking

[[bench]]
name = "hokg_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
